# blitz-world

./: .gitignore  CMakeLists.txt  README.md
audio/: CMakeLists.txt  audio.cpp  audio.h
core/: CMakeLists.txt  any.h  appevent.cpp  appevent.h  bitmask.h  core.hh  debug.cpp  debug.h  function.h  object.cpp  object.h  podvector.h  property.cpp  property.h  shared.cpp  shared.h  sharedptr.h  signal.h  signal_impl.inl  std.cpp  std.h  weakptr.h
core/tests/: signal.cpp
core3d/: CMakeLists.txt  core3d.cpp  core3d.hh  formats.cpp  formats.h  framebuffer.h  glgraphicsdevice.cpp  glgraphicsdevice.h  gltypes.cpp  gltypes.h  glutils.cpp  glutils.h  graphicsdevice.cpp  graphicsdevice.h  indexbuffer.h  shader.h  texture.h  types.h  vertexbuffer.h
core3d/tests/: hellotriangle.cpp
geom/: CMakeLists.txt  affinemat4.h  box.cpp  box.h  line.h  mat3.h  mat4.h  plane.h  quat.h  rect.h  vec2.h  vec3.h  vec4.h
gles/: CMakeLists.txt
glfw/: CMakeLists.txt  build.sh  glfw.hh
glfw/libglfw3/: build.sh
glwindow/: CMakeLists.txt  gamepad.cpp  gamepad.h  gamepadmapping.cpp  gamepadmapping.h  glwindow.cpp  glwindow.h  keyboard.cpp  keyboard.h  uidevice.cpp  uidevice.h
glwindow/tests/: helloworld.cpp
image/: CMakeLists.txt  image.cpp  image.h  image.hh  imageutils.cpp  imageutils.h  imguiex.h
imgui/: CMakeLists.txt  build.sh  imgui.cpp  imgui.hh  imguiex.cpp  imguiex.h
imgui/libimgui/ImGui/: imgui.cpp
opengl/: CMakeLists.txt  opengl.cpp  opengl.hh
openxr/: CMakeLists.txt
openxr/libopenxr/: build.sh
openxr/tests/: compiletest.cpp  createinstance.cpp  createsession.cpp
stb/: CMakeLists.txt  stb.cpp  stb.hh
